--- a/serverless.yml
+++ b/serverless.yml
@@ -1,16 +1,3 @@
-# Welcome to Serverless!
-#
-# This file is the main config file for your service.
-# It's very minimal at this point and uses default values.
-# You can always add more config options for more control.
-# We've included some commented out config examples here.
-# Just uncomment any of them to get that config option.
-#
-# For full config options, check the docs:
-#    docs.serverless.com
-#
-# Happy Coding!
-
 service: sls-wpnh-simple-redirects
 # app and org for use with dashboard.serverless.com
 #app: your-app-name
@@ -20,33 +7,38 @@ service: sls-wpnh-simple-redirects
 # Check out our docs for more details
 frameworkVersion: '1'
 
+custom:
+  stage: ${opt:stage, "dev1"} # dev1, v1, dev2, v2, etc
+  config: ${file(resources/${self:custom.stage}-config.yml)}
+
 provider:
   name: aws
   runtime: nodejs12.x
-
-# you can overwrite defaults here
-#  stage: dev
-#  region: us-east-1
-
-# you can add statements to the Lambda function's IAM Role here
-#  iamRoleStatements:
-#    - Effect: "Allow"
-#      Action:
-#        - "s3:ListBucket"
-#      Resource: { "Fn::Join" : ["", ["arn:aws:s3:::", { "Ref" : "ServerlessDeploymentBucket" } ] ]  }
-#    - Effect: "Allow"
-#      Action:
-#        - "s3:PutObject"
-#      Resource:
-#        Fn::Join:
-#          - ""
-#          - - "arn:aws:s3:::"
-#            - "Ref" : "ServerlessDeploymentBucket"
-#            - "/*"
-
-# you can define service wide environment variables here
-#  environment:
-#    variable1: value1
+  memorySize: 128
+  timeout: 30
+  region: us-east-1
+  stage: ${self:custom.stage}
+  # Environment variables
+  environment:
+    DEFAULTDOMAIN: ${self:custom.config.defaultDomain}
+    DOMAINSETTINGSS3BUCKET: ${self:custom.config.domainSettingsS3Bucket}
+    DOMAINSETTINGS3KEY: ${self:custom.config.domainSettingsS3Key}
+  # IAM statements
+  # Give lambda role access to domain settings file in S3
+  iamRoleStatements:
+    - Effect: "Allow"
+      Action:
+        - "s3:ListBucket"
+      Resource: { "Fn::Join" : ["", ["arn:aws:s3:::", ${self:custom.config.domainSettingsS3Bucket} ] ]  }
+    - Effect: "Allow"
+      Action:
+        - "s3:GetObject"
+      Resource:
+        Fn::Join:
+          - ""
+          - - "arn:aws:s3:::"
+            - ${self:custom.config.domainSettingsS3Bucket}
+            - ${self:custom.config.domainSettingsS3Key}
 
 # you can add packaging information here
 #package:
@@ -58,56 +50,34 @@ provider:
 #    - exclude-me-dir/**
 
 functions:
-  hello:
-    handler: handler.hello
-#    The following are a few example events you can configure
-#    NOTE: Please make sure to change your handler code to work with those events
-#    Check the event documentation for details
-#    events:
-#      - http:
-#          path: users/create
-#          method: get
-#      - websocket: $connect
-#      - s3: ${env:BUCKET}
-#      - schedule: rate(10 minutes)
-#      - sns: greeter-topic
-#      - stream: arn:aws:dynamodb:region:XXXXXX:table/foo/stream/1970-01-01T00:00:00.000
-#      - alexaSkill: amzn1.ask.skill.xx-xx-xx-xx
-#      - alexaSmartHome: amzn1.ask.skill.xx-xx-xx-xx
-#      - iot:
-#          sql: "SELECT * FROM 'some_topic'"
-#      - cloudwatchEvent:
-#          event:
-#            source:
-#              - "aws.ec2"
-#            detail-type:
-#              - "EC2 Instance State-change Notification"
-#            detail:
-#              state:
-#                - pending
-#      - cloudwatchLog: '/aws/lambda/hello'
-#      - cognitoUserPool:
-#          pool: MyUserPool
-#          trigger: PreSignUp
-#      - alb:
-#          listenerArn: arn:aws:elasticloadbalancing:us-east-1:XXXXXX:listener/app/my-load-balancer/50dc6c495c0c9188/
-#          priority: 1
-#          conditions:
-#            host: example.com
-#            path: /hello
+  simpleRedirectAtEdge:
+    handler: lambdas/simpleRedirect.handler
+    events:
+      - cloudFront:
+          eventType: origin-response
+          pathPattern: /
+          behavior:
+            ViewerProtocolPolicy: allow-all
+            ForwardedValues:
+              QueryString: true
+          origin:
+            DomainName: nighthawk.kylemunz.com.s3-website-us-east-1.amazonaws.com
+            CustomOriginConfig:
+              OriginProtocolPolicy: "http-only"
 
-#    Define function environment variables here
-#    environment:
-#      variable2: value2
-
-# you can add CloudFormation resource templates here
-#resources:
-#  Resources:
-#    NewResource:
-#      Type: AWS::S3::Bucket
-#      Properties:
-#        BucketName: my-new-bucket
-#  Outputs:
-#     NewOutput:
-#       Description: "Description for the output"
-#       Value: "Some output value"
+# CloudFormation resource templates
+resources:
+  Resources:
+    CloudFrontDistribution:
+      Type: AWS::CloudFront::Distribution
+      Properties:
+        DistributionConfig:
+          Comment: CF for S3 WPNH
+          PriceClass: PriceClass_100
+          Aliases:
+            - nighthawk2.kylemunz.com
+          ViewerCertificate:
+            AcmCertificateArn: arn:aws:acm:us-east-1:304786516436:certificate/4bdc677c-00ac-4da4-bb6d-2c6b9d8cfe65
+            SslSupportMethod: sni-only
+          DefaultCacheBehavior:
+            ViewerProtocolPolicy: redirect-to-https
