Moved CloudFront CNAME aliases to resources/config.json

--- a/resources/config.json.sample
+++ b/resources/config.json.sample
@@ -2,11 +2,16 @@
   "_comments": {
     "DEFAULTDOMAIN": "The default domain to use for all redirect. Must begin with https:// and omit the trailing slash.",
     "SETTINGSS3BUCKET": "The name of the S3 bucket where your redirects.json is stored.",
-    "SETTINGSS3KEY": "The key (path) to your redirects.json file."
+    "SETTINGSS3KEY": "The key (path) to your redirects.json file.",
+    "ALIASES": "Alternate Domain Names (CNAMEs) for CloudFront distribution."
   },
   "envvars": {
     "DEFAULTDOMAIN": "https://github.com/kyle138",
     "SETTINGSS3BUCKET": "settings-json-bucket",
     "SETTINGSS3KEY": "simple-redirects/wp/redirects.json"
+  },
+  "cloudfront": {
+    "ALIASES": ["blog.example.com","blog2.example.com"]
   }
+
 }
